fix scrollbar issue and update header

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,13 @@
 @tailwind base;
-  @tailwind components;
-  @tailwind utilities;
+@tailwind components;
+@tailwind utilities;
+
+*{
+  -ms-overflow-style: none;
+}
+::-webkit-scrollbar {
+  display: none;
+}
 
   @layer base {
     :root {
